# claptrap

./: .gitignore  .gitmodules  .ignore  CMakeLists.txt  LICENSE  README.md  cmake.deps.txt  cmake.v3.txt
.github/workflows/: main.yml
cmake/: SaneCompilerOptions.cmake  VST3BundleArchitecture.cmake
examples/: CMakeLists.txt  cmake.deps.txt
examples/common/: apple_bundle.cpp  apple_bundle.hpp  imgui_window.cpp  imgui_window.hpp  include_vstgui.hpp  vstgui_clap_gui.hpp  vstgui_init.hpp  vstgui_x11_runloop.cpp  vstgui_x11_runloop.hpp
examples/gain/: gain.cpp
examples/sources/common/: vstgui_clap_gui.cpp  vstgui_init.cpp  vstgui_x11_runloop.hpp
sources/libs/: fmt.hpp  heapsort.hpp  lib_uuid.c  lib_uuid.h  span.hpp  utf.hpp
sources/utility/: ct_assert.hpp  ct_attributes.hpp  ct_bump_allocator.cpp  ct_bump_allocator.hpp  ct_memory.hpp  ct_messages.hpp  ct_posix_fd.cpp  ct_posix_fd.hpp  ct_posix_pipe.cpp  ct_posix_pipe.hpp  ct_safe_fnptr.hpp  ct_scope.hpp  ct_uuid.cpp  ct_uuid.hpp  unicode_helpers.hpp  url_helpers.cpp  url_helpers.hpp
sources/v3/: clap_helpers.cpp  clap_helpers.hpp  clap_id_map.hpp  ct_audio_processor.cpp  ct_audio_processor.hpp  ct_channel_mapping.cpp  ct_channel_mapping.hpp  ct_component.cpp  ct_component.hpp  ct_component_caches.cpp  ct_component_caches.hpp  ct_defs.cpp  ct_defs.hpp  ct_edit_controller.cpp  ct_edit_controller.hpp  ct_event_conversion.cpp  ct_event_conversion.hpp  ct_event_handler.cpp  ct_event_handler.hpp  ct_events.cpp  ct_events.hpp  ct_host.cpp  ct_host.hpp  ct_host_loop.cpp  ct_host_loop.hpp  ct_host_loop_posix.cpp  ct_host_loop_posix.hpp  ct_plug_view.cpp  ct_plug_view.hpp  ct_plug_view_content_scale.cpp  ct_plug_view_content_scale.hpp  ct_plugin_factory.cpp  ct_plugin_factory.hpp  ct_process_context_requirements.cpp  ct_process_context_requirements.hpp  ct_stream.cpp  ct_stream.hpp  ct_threads.cpp  ct_threads.hpp  ct_timer_handler.cpp  (+9 more)
